--- a/FitHub/FitHub/FollowingViewController.storyboard
+++ b/FitHub/FitHub/FollowingViewController.storyboard
@@ -16,7 +16,19 @@
                     <view key="view" contentMode="scaleToFill" id="6Rh-D8-Zma">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GhG-Mw-RIt">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="wf5-Kf-8ig" firstAttribute="bottom" secondItem="GhG-Mw-RIt" secondAttribute="bottom" id="Bus-jM-Pe1"/>
+                            <constraint firstItem="wf5-Kf-8ig" firstAttribute="trailing" secondItem="GhG-Mw-RIt" secondAttribute="trailing" id="TW3-Fi-9r6"/>
+                            <constraint firstItem="GhG-Mw-RIt" firstAttribute="leading" secondItem="wf5-Kf-8ig" secondAttribute="leading" id="Whs-yq-eOC"/>
+                            <constraint firstItem="GhG-Mw-RIt" firstAttribute="top" secondItem="wf5-Kf-8ig" secondAttribute="top" id="tEn-r2-Tmb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="wf5-Kf-8ig"/>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
