--- a/FitHub/FitHub/FollowingViewController.storyboard
+++ b/FitHub/FitHub/FollowingViewController.storyboard
@@ -9,17 +9,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Following View Controller-->
+        <!--Following-->
         <scene sceneID="z2g-uf-ehk">
             <objects>
-                <viewController storyboardIdentifier="FollowingViewController" id="WZr-TP-3Kh" customClass="FollowingViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FollowingViewController" title="Following" id="WZr-TP-3Kh" customClass="FollowingViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Rh-D8-Zma">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GhG-Mw-RIt">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GhG-Mw-RIt">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="WZr-TP-3Kh" id="HBa-XA-XMM"/>
+                                    <outlet property="delegate" destination="WZr-TP-3Kh" id="iZS-8d-pjH"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -32,6 +36,9 @@
                         <viewLayoutGuide key="safeArea" id="wf5-Kf-8ig"/>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="GhG-Mw-RIt" id="hzw-0g-pUB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6su-dT-k7x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
