--- a/FitHub/FitHub/RepositoryViewController.storyboard
+++ b/FitHub/FitHub/RepositoryViewController.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Repository View Controller-->
+        <!--Repository-->
         <scene sceneID="OYo-P4-3hL">
             <objects>
-                <viewController storyboardIdentifier="RepositoryViewController" id="aVk-fv-jWV" customClass="RepositoryViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RepositoryViewController" title="Repository" id="aVk-fv-jWV" customClass="RepositoryViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qZg-Qp-dsh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
