--- a/FitHub/FitHub/RepositoryViewController.storyboard
+++ b/FitHub/FitHub/RepositoryViewController.storyboard
@@ -16,10 +16,29 @@
                     <view key="view" contentMode="scaleToFill" id="qZg-Qp-dsh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C1m-BY-qBu">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="aVk-fv-jWV" id="dm1-hB-KL2"/>
+                                    <outlet property="delegate" destination="aVk-fv-jWV" id="qIc-Yh-ugt"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="C1m-BY-qBu" firstAttribute="leading" secondItem="HVg-so-OpS" secondAttribute="leading" id="96B-pV-cLM"/>
+                            <constraint firstItem="HVg-so-OpS" firstAttribute="bottom" secondItem="C1m-BY-qBu" secondAttribute="bottom" id="IGn-jF-hE1"/>
+                            <constraint firstItem="HVg-so-OpS" firstAttribute="trailing" secondItem="C1m-BY-qBu" secondAttribute="trailing" id="caZ-bF-6Tc"/>
+                            <constraint firstItem="C1m-BY-qBu" firstAttribute="top" secondItem="HVg-so-OpS" secondAttribute="top" id="pct-L8-PHZ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="HVg-so-OpS"/>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="C1m-BY-qBu" id="C3y-PU-E6l"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B14-yZ-LMa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
