--- a/FitHub/FitHub/Main/Base.lproj/Main.storyboard
+++ b/FitHub/FitHub/Main/Base.lproj/Main.storyboard
@@ -24,9 +24,42 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S60-S9-BNW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1218" y="266"/>
+            <point key="canvasLocation" x="-834" y="707"/>
         </scene>
-        <!--Me-->
+        <!--Events-->
+        <scene sceneID="JYU-Oe-nhh">
+            <objects>
+                <navigationController id="g2r-WZ-XtM" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Events" id="pxd-9f-Vld"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cPC-DM-1tK">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="6og-NV-5Df" kind="relationship" relationship="rootViewController" id="Xb1-MK-ion"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MzU-2o-Kfb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-834" y="-114"/>
+        </scene>
+        <!--Events View Controller-->
+        <scene sceneID="lql-fP-SIf">
+            <objects>
+                <viewController id="6og-NV-5Df" customClass="EventsViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LuA-xa-Syf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="nHV-zh-ta7"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="E8N-62-xR1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fh0-rM-NpB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="116" y="-114"/>
+        </scene>
+        <!--Me View Controller-->
         <scene sceneID="WRN-Jq-s6E">
             <objects>
                 <viewController id="SO1-rX-qkk" customClass="MeViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
@@ -36,12 +69,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="S0k-XW-GXg"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Me" id="Dvd-xy-be1"/>
                     <navigationItem key="navigationItem" id="Jro-Kj-vKj"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Dm-KN-gz1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-535" y="266"/>
+            <point key="canvasLocation" x="116" y="708"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="v9y-Ed-z9u">
@@ -54,8 +86,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Y0b-M3-57u" kind="relationship" relationship="viewControllers" id="hmf-ug-aHW"/>
-                        <segue destination="1aT-5n-NEB" kind="relationship" relationship="viewControllers" id="b4P-BH-D4U"/>
+                        <segue destination="HQF-nP-7r5" kind="relationship" relationship="viewControllers" id="Y8W-Fd-RWG"/>
+                        <segue destination="g2r-WZ-XtM" kind="relationship" relationship="viewControllers" id="Fhp-bS-9mI"/>
                         <segue destination="KoM-w1-RLY" kind="relationship" relationship="viewControllers" id="4u9-sN-q1K"/>
                     </connections>
                 </tabBarController>
@@ -63,25 +95,95 @@
             </objects>
             <point key="canvasLocation" x="-1759" y="-113"/>
         </scene>
-        <!--Home-->
-        <scene sceneID="mCR-oS-Xd6">
+        <!--Users-->
+        <scene sceneID="7oT-96-rZ9">
             <objects>
-                <viewControllerPlaceholder storyboardName="Home" id="Y0b-M3-57u" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Users" id="6Ag-2A-EeG"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bjR-cu-eTn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="HQF-nP-7r5" customClass="NavigationController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Users" image="account" id="EDV-Sq-GjS"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PNv-Dt-09N" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="lhj-BX-qy3" kind="relationship" relationship="rootViewController" id="6JO-y7-ykR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hZl-Bu-OWN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-899" y="-409"/>
+            <point key="canvasLocation" x="-834" y="-897"/>
         </scene>
-        <!--EventsViewController-->
-        <scene sceneID="qBC-Y1-PLV">
+        <!--All Language-->
+        <scene sceneID="Ngh-aY-St4">
             <objects>
-                <viewControllerPlaceholder storyboardName="EventsViewController" id="1aT-5n-NEB" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Events" id="29p-uA-IbO"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vYZ-pl-Wxz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="lhj-BX-qy3" customClass="HomeViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HLb-z0-Inu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SMV-We-ijP">
+                                <rect key="frame" x="0.0" y="64" width="375" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ZY-Tq-2ia">
+                                        <rect key="frame" x="267" y="0.0" width="100" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="xPw-08-3k6"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="7ZY-Tq-2ia" firstAttribute="top" secondItem="SMV-We-ijP" secondAttribute="top" id="gT3-A7-jnY"/>
+                                    <constraint firstAttribute="bottom" secondItem="7ZY-Tq-2ia" secondAttribute="bottom" id="lBG-kd-yJ8"/>
+                                    <constraint firstAttribute="trailing" secondItem="7ZY-Tq-2ia" secondAttribute="trailing" constant="8" id="mwf-Iy-iXw"/>
+                                    <constraint firstAttribute="height" constant="30" id="x9t-4a-Swg"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bFE-7T-0Qh">
+                                <rect key="frame" x="0.0" y="94" width="375" height="524"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="lhj-BX-qy3" id="qzh-kj-MCI"/>
+                                    <outlet property="delegate" destination="lhj-BX-qy3" id="9Vj-vC-Z3a"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="SMV-We-ijP" firstAttribute="top" secondItem="6Uh-O7-cdL" secondAttribute="top" id="0B3-S4-9U0"/>
+                            <constraint firstItem="6Uh-O7-cdL" firstAttribute="trailing" secondItem="bFE-7T-0Qh" secondAttribute="trailing" id="Fdk-1P-FGK"/>
+                            <constraint firstItem="bFE-7T-0Qh" firstAttribute="top" secondItem="SMV-We-ijP" secondAttribute="bottom" id="H1S-N5-pu8"/>
+                            <constraint firstItem="6Uh-O7-cdL" firstAttribute="bottom" secondItem="bFE-7T-0Qh" secondAttribute="bottom" id="k01-QQ-fAR"/>
+                            <constraint firstItem="6Uh-O7-cdL" firstAttribute="trailing" secondItem="SMV-We-ijP" secondAttribute="trailing" id="mD7-ux-vOL"/>
+                            <constraint firstItem="bFE-7T-0Qh" firstAttribute="leading" secondItem="6Uh-O7-cdL" secondAttribute="leading" id="otX-dY-B0t"/>
+                            <constraint firstItem="SMV-We-ijP" firstAttribute="leading" secondItem="6Uh-O7-cdL" secondAttribute="leading" id="qz6-tL-5VA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Uh-O7-cdL"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="All Language" id="T9N-Qv-DLh">
+                        <barButtonItem key="leftBarButtonItem" title="City" id="bSM-dj-c1y">
+                            <connections>
+                                <action selector="cityItemTap:" destination="lhj-BX-qy3" id="ALR-wt-Urf"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Language" id="Sjn-rl-Q31">
+                            <connections>
+                                <action selector="languageItemTap:" destination="lhj-BX-qy3" id="aFC-cV-SQn"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="cityItem" destination="bSM-dj-c1y" id="Dcx-uJ-X8s"/>
+                        <outlet property="languageItem" destination="Sjn-rl-Q31" id="5RN-1G-4CU"/>
+                        <outlet property="tableView" destination="bFE-7T-0Qh" id="8Hc-TU-Z04"/>
+                        <outlet property="totalLabel" destination="7ZY-Tq-2ia" id="m59-QK-U5B"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K5p-HO-ts4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-892" y="-248"/>
+            <point key="canvasLocation" x="116" y="-897"/>
         </scene>
     </scenes>
     <resources>
