--- a/FitHub/FitHub/Main/Base.lproj/Main.storyboard
+++ b/FitHub/FitHub/Main/Base.lproj/Main.storyboard
@@ -124,20 +124,28 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ZY-Tq-2ia">
-                                        <rect key="frame" x="267" y="0.0" width="100" height="30"/>
+                                        <rect key="frame" x="329" y="0.0" width="38" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="xPw-08-3k6"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="xPw-08-3k6"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ac-hn-MsG">
+                                        <rect key="frame" x="0.0" y="0.0" width="329" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstItem="3ac-hn-MsG" firstAttribute="top" secondItem="SMV-We-ijP" secondAttribute="top" id="EdA-vs-Hd9"/>
+                                    <constraint firstItem="7ZY-Tq-2ia" firstAttribute="leading" secondItem="3ac-hn-MsG" secondAttribute="trailing" id="Kbd-V4-A3s"/>
+                                    <constraint firstItem="3ac-hn-MsG" firstAttribute="leading" secondItem="SMV-We-ijP" secondAttribute="leading" id="PPL-uo-2eH"/>
                                     <constraint firstItem="7ZY-Tq-2ia" firstAttribute="top" secondItem="SMV-We-ijP" secondAttribute="top" id="gT3-A7-jnY"/>
                                     <constraint firstAttribute="bottom" secondItem="7ZY-Tq-2ia" secondAttribute="bottom" id="lBG-kd-yJ8"/>
                                     <constraint firstAttribute="trailing" secondItem="7ZY-Tq-2ia" secondAttribute="trailing" constant="8" id="mwf-Iy-iXw"/>
+                                    <constraint firstAttribute="bottom" secondItem="3ac-hn-MsG" secondAttribute="bottom" id="r3s-8q-dD9"/>
                                     <constraint firstAttribute="height" constant="30" id="x9t-4a-Swg"/>
                                 </constraints>
                             </view>
@@ -183,7 +191,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K5p-HO-ts4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116" y="-897"/>
+            <point key="canvasLocation" x="116" y="-897.30134932533736"/>
         </scene>
     </scenes>
     <resources>
