--- a/FitHub/FitHub/Main/Base.lproj/Main.storyboard
+++ b/FitHub/FitHub/Main/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S60-S9-BNW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-834" y="707"/>
+            <point key="canvasLocation" x="-834" y="1479"/>
         </scene>
         <!--Events-->
         <scene sceneID="JYU-Oe-nhh">
@@ -92,7 +92,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Dm-KN-gz1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116" y="708"/>
+            <point key="canvasLocation" x="116" y="1480"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="v9y-Ed-z9u">
@@ -107,6 +107,7 @@
                     <connections>
                         <segue destination="HQF-nP-7r5" kind="relationship" relationship="viewControllers" id="Y8W-Fd-RWG"/>
                         <segue destination="g2r-WZ-XtM" kind="relationship" relationship="viewControllers" id="Fhp-bS-9mI"/>
+                        <segue destination="SAo-Fj-jkC" kind="relationship" relationship="viewControllers" id="wT2-Y9-I2O"/>
                         <segue destination="KoM-w1-RLY" kind="relationship" relationship="viewControllers" id="4u9-sN-q1K"/>
                     </connections>
                 </tabBarController>
@@ -211,6 +212,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K5p-HO-ts4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="116" y="-897.30134932533736"/>
+        </scene>
+        <!--Discovery-->
+        <scene sceneID="q5Y-t6-hoe">
+            <objects>
+                <navigationController id="SAo-Fj-jkC" customClass="NavigationController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Discovery" image="account" id="J8c-X5-mhf"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bxb-YS-DKK" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="TQ5-fz-OaR" kind="relationship" relationship="rootViewController" id="ZhQ-zX-97p"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DC2-2V-9x2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-834" y="605"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ULJ-yk-jXG">
+            <objects>
+                <viewController id="TQ5-fz-OaR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CdQ-J6-oNy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ha8-U5-kAx"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="N0Z-bU-yXl"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cnX-ge-sjZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="114" y="606"/>
         </scene>
     </scenes>
     <resources>
