--- a/FitHub/FitHub/Main/Base.lproj/Main.storyboard
+++ b/FitHub/FitHub/Main/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="90f-Hf-Ae5">
             <objects>
                 <navigationController id="KoM-w1-RLY" customClass="NavigationController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Me" image="account" id="Szu-IL-gYZ"/>
+                    <tabBarItem key="tabBarItem" title="Me" image="setting" id="Szu-IL-gYZ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VPf-y0-zo7" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -30,7 +30,7 @@
         <scene sceneID="JYU-Oe-nhh">
             <objects>
                 <navigationController id="g2r-WZ-XtM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Events" id="pxd-9f-Vld"/>
+                    <tabBarItem key="tabBarItem" title="Events" image="events" id="pxd-9f-Vld"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cPC-DM-1tK">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -119,7 +119,7 @@
         <scene sceneID="7oT-96-rZ9">
             <objects>
                 <navigationController id="HQF-nP-7r5" customClass="NavigationController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Users" image="account" id="EDV-Sq-GjS"/>
+                    <tabBarItem key="tabBarItem" title="Users" image="user" id="EDV-Sq-GjS"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PNv-Dt-09N" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -217,7 +217,7 @@
         <scene sceneID="q5Y-t6-hoe">
             <objects>
                 <navigationController id="SAo-Fj-jkC" customClass="NavigationController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Discovery" image="account" id="J8c-X5-mhf"/>
+                    <tabBarItem key="tabBarItem" title="Discovery" image="discovery" id="J8c-X5-mhf"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bxb-YS-DKK" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -248,6 +248,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="account" width="16" height="16"/>
+        <image name="discovery" width="16" height="16"/>
+        <image name="events" width="16" height="16"/>
+        <image name="setting" width="16" height="16"/>
+        <image name="user" width="16" height="16"/>
     </resources>
 </document>
